--- a/.env.template
+++ b/.env.template
@@ -4,6 +4,8 @@ DB_USER=
 DB_NAME=
 DB_PASSWORD=
 
+# openssl rand -base64 32
+AUTH_SECRET=
 
 # This was inserted by `prisma init`:
 # Environment variables declared in this file are automatically made available to Prisma.
