--- a/.env.template
+++ b/.env.template
@@ -7,6 +7,18 @@ DB_PASSWORD=
 # openssl rand -base64 32
 AUTH_SECRET=
 
+# ==== Paypal
+# https://developer.paypal.com/dashboard
+# sb-12m8l30691025@personal.example.com
+# A123456789
+NEXT_PUBLIC_PAYPAL_CLIENT_ID=
+PAYPAL_SECRET=
+
+# POST
+PAYPAL_OAUTH_URL=https://api-m.sandbox.paypal.com/v1/oauth2/token
+#GET
+PAYPAL_ORDERS_URL=https://api.sandbox.paypal.com/v2/checkout/orders
+
 # This was inserted by `prisma init`:
 # Environment variables declared in this file are automatically made available to Prisma.
 # See the documentation for more detail: https://pris.ly/d/prisma-schema#accessing-environment-variables-from-the-schema
