--- a/.env.template
+++ b/.env.template
@@ -7,6 +7,10 @@ DB_PASSWORD=
 # openssl rand -base64 32
 AUTH_SECRET=
 
+# https://console.cloudinary.com
+# Este URL es el necesario para colocar las imágenes
+CLOUDINARY_URL=
+
 # ==== Paypal
 # https://developer.paypal.com/dashboard
 # sb-12m8l30691025@personal.example.com
